--- a/menu.html
+++ b/menu.html
@@ -704,10 +704,10 @@
                             t = t + "<div class=\"mask-icon\">"
                             t = t + " <ul>"
                             t = t + "    <!-- <li><a href=\"\" data-toggle=\"tooltip\" data-placement=\"right\" title=\"View\"><i class=\"fas fa-eye\"></i></a></li>"
-                            t = t + "    <li><a href=\"\" da`ta-toggle=\"tooltip\" data-placement=\"right\" title=\"Compare\"><i class=\"fas fa-sync-alt\"></i></a></li>"
+                            t = t + "    <li><a href=\"\" data-toggle=\"tooltip\" data-placement=\"right\" title=\"Compare\"><i class=\"fas fa-sync-alt\"></i></a></li>"
                             t = t + " <li><a href=\"\" data-toggle=\"tooltip\" data-placement=\"right\" title=\"Add to Wishlist\"><i class=\"far fa-heart\"></i></a></li> -->"
                             t = t + "</ul>"
-                            t = t + "  <a class=\"cart\" onclick = \"addtocart(" + counter + ")\" href=\"\">Add to Cart</a>"
+                            t = t + "  <a class=\"cart\" onclick = \"addtocart(" + counter + ")\" href=\"#\">Add to Cart</a>"
 
                             t = t + " </div>"
                             t = t + " </div>"
@@ -854,7 +854,7 @@
 
                                 <a class="dropdown-item" href="profile.html">Profile</a>
                                 <a class="dropdown-item" href="Orders.html">Orders</a>
-                                <a class="dropdown-item" onclick="logout()" href="">logout</a>
+                                <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
                         </li>
 
@@ -886,7 +886,7 @@
                         <div class="d-flex justify-content-center h-100">
                             <div class="searchbar">
                                 <input class="search_input" id="inputsearchhere" type="text" name="" placeholder="Search...">
-                                <a href="" class="search_icon" onclick="searchthis()"><i class="fas fa-search"></i></a>
+                                <a href="#" class="search_icon" onclick="searchthis()"><i class="fas fa-search"></i></a>
                             </div>
                         </div>
                     </div>
