--- a/menu.html
+++ b/menu.html
@@ -454,6 +454,7 @@
             $.get(url,
                 function(data, status) {
                     let t = ""
+		    console.log(data)
 
                     for (let i = 0; i < data.length; i++) {
 
