--- a/register.html
+++ b/register.html
@@ -167,7 +167,7 @@
                     //if (validatePhone(document.getElementById("phoneNumber").value)) {
 
                     if (isEmpty(document.getElementById("email").value) == false) {
-                        email = document.getElementById("age").value
+                        email = document.getElementById("email").value
                     }
                     phone = "+251" + document.getElementById("pno").value
                     firstname = document.getElementById("first_name").value
