--- a/menu.html
+++ b/menu.html
@@ -827,7 +827,7 @@
 
                                     </div>
                                 </div>
-                                <div class="col-12 d-flex shopping-box"><a href="" style="background-color: #fd8000;" onclick="orderCheckOut()" class="ml-auto btn hvr-hover">Checkout</a> </div>
+                                <div class="col-12 d-flex shopping-box"><a href="#" style="background-color: #fd8000;" onclick="orderCheckOut()" class="ml-auto btn hvr-hover">Checkout</a> </div>
                             </div>
 
                         </div>
