--- a/login.html
+++ b/login.html
@@ -94,10 +94,15 @@
 
 
         });
-
+        function forgotPassword() {
+            window.location.href = "forgot-password.html";
+        }
 
         function callRegister() {
             window.location.href = "register.html";
+        }
+        function callHome() {
+            window.location.href = "index.html";
         }
     </script>
 </head>
@@ -142,7 +147,7 @@
                         <span class="txt1">
 							Forgot
 						</span>
-                        <a class="txt2" href="#">
+                        <a class="txt2" onclick="forgotPassword()" href="#">
 							Username / Password?
 						</a>
                     </div>
@@ -150,6 +155,10 @@
                     <div class="text-center p-t-136">
                         <a class="txt2" onclick="callRegister()" href="#">
 							Create your Account
+							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                        </a><br>
+                        <a class="txt2" onclick="callHome()" href="#">
+							Back to HomePage
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
                     </div>
