--- a/PassChange.html
+++ b/PassChange.html
@@ -82,7 +82,7 @@
                 }, function(data, status) {
 
                     if (status === 'success') {
-
+                        alert("success")
                     }
                 }).fail(function(jqXHR, textStatus, errorThrown) {
 
