--- a/about.html
+++ b/about.html
@@ -90,7 +90,8 @@
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown" id="username"></a>
 
                             <div class="dropdown-menu" aria-labelledby="dropdown-a">
-                                <a class="dropdown-item" href="profile.html">Profile</a>
+                                <a class="dropdown-item" href="PassChange.html">Change Password</a>
+                                <a class="dropdown-item" href="profile.html">Change Profile</a>
                                 <a class="dropdown-item" href="myaccount.html">Orders</a>
                                 <a class="dropdown-item" onclick="logout()" href="#">logout</a>
                             </div>
